// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`on error > returns error data 1`] = `
{
  "data": undefined,
  "error": [CombinedError: [Network] No Content],
  "extensions": undefined,
  "hasNext": false,
  "operation": {
    "context": {
      "fetchOptions": {
        "method": "POST",
      },
      "requestPolicy": "cache-first",
      "url": "http://localhost:3000/graphql",
    },
    "key": 2,
    "kind": "query",
    "query": {
      "__key": -2395444236,
      "definitions": [
        {
          "directives": undefined,
          "kind": "OperationDefinition",
          "name": {
            "kind": "Name",
            "value": "getUser",
          },
          "operation": "query",
          "selectionSet": {
            "kind": "SelectionSet",
            "selections": [
              {
                "alias": undefined,
                "arguments": [
                  {
                    "kind": "Argument",
                    "name": {
                      "kind": "Name",
                      "value": "name",
                    },
                    "value": {
                      "kind": "Variable",
                      "name": {
                        "kind": "Name",
                        "value": "name",
                      },
                    },
                  },
                ],
                "directives": undefined,
                "kind": "Field",
                "name": {
                  "kind": "Name",
                  "value": "user",
                },
                "selectionSet": {
                  "kind": "SelectionSet",
                  "selections": [
                    {
                      "alias": undefined,
                      "arguments": undefined,
                      "directives": undefined,
                      "kind": "Field",
                      "name": {
                        "kind": "Name",
                        "value": "id",
                      },
                      "selectionSet": undefined,
                    },
                    {
                      "alias": undefined,
                      "arguments": undefined,
                      "directives": undefined,
                      "kind": "Field",
                      "name": {
                        "kind": "Name",
                        "value": "firstName",
                      },
                      "selectionSet": undefined,
                    },
                    {
                      "alias": undefined,
                      "arguments": undefined,
                      "directives": undefined,
                      "kind": "Field",
                      "name": {
                        "kind": "Name",
                        "value": "lastName",
                      },
                      "selectionSet": undefined,
                    },
                  ],
                },
              },
            ],
          },
          "variableDefinitions": [
            {
              "defaultValue": undefined,
              "directives": undefined,
              "kind": "VariableDefinition",
              "type": {
                "kind": "NamedType",
                "name": {
                  "kind": "Name",
                  "value": "String",
                },
              },
              "variable": {
                "kind": "Variable",
                "name": {
                  "kind": "Name",
                  "value": "name",
                },
              },
            },
          ],
        },
      ],
      "kind": "Document",
      "loc": {
        "end": 92,
        "source": {
          "body": "query getUser($name: String) {
  user(name: $name) {
    id
    firstName
    lastName
  }
}",
          "locationOffset": {
            "column": 1,
            "line": 1,
          },
          "name": "gql",
        },
        "start": 0,
      },
    },
    "variables": {
      "name": "Clara",
    },
  },
  "stale": false,
}
`;

exports[`on error > returns error data with status 400 and manual redirect mode 1`] = `
{
  "data": undefined,
  "error": [CombinedError: [Network] No Content],
  "extensions": undefined,
  "hasNext": false,
  "operation": {
    "context": {
      "fetchOptions": [MockFunction spy] {
        "calls": [
          [],
        ],
        "results": [
          {
            "type": "return",
            "value": {
              "redirect": "manual",
            },
          },
        ],
      },
      "requestPolicy": "cache-first",
      "url": "http://localhost:3000/graphql",
    },
    "key": 2,
    "kind": "query",
    "query": {
      "__key": -2395444236,
      "definitions": [
        {
          "directives": undefined,
          "kind": "OperationDefinition",
          "name": {
            "kind": "Name",
            "value": "getUser",
          },
          "operation": "query",
          "selectionSet": {
            "kind": "SelectionSet",
            "selections": [
              {
                "alias": undefined,
                "arguments": [
                  {
                    "kind": "Argument",
                    "name": {
                      "kind": "Name",
                      "value": "name",
                    },
                    "value": {
                      "kind": "Variable",
                      "name": {
                        "kind": "Name",
                        "value": "name",
                      },
                    },
                  },
                ],
                "directives": undefined,
                "kind": "Field",
                "name": {
                  "kind": "Name",
                  "value": "user",
                },
                "selectionSet": {
                  "kind": "SelectionSet",
                  "selections": [
                    {
                      "alias": undefined,
                      "arguments": undefined,
                      "directives": undefined,
                      "kind": "Field",
                      "name": {
                        "kind": "Name",
                        "value": "id",
                      },
                      "selectionSet": undefined,
                    },
                    {
                      "alias": undefined,
                      "arguments": undefined,
                      "directives": undefined,
                      "kind": "Field",
                      "name": {
                        "kind": "Name",
                        "value": "firstName",
                      },
                      "selectionSet": undefined,
                    },
                    {
                      "alias": undefined,
                      "arguments": undefined,
                      "directives": undefined,
                      "kind": "Field",
                      "name": {
                        "kind": "Name",
                        "value": "lastName",
                      },
                      "selectionSet": undefined,
                    },
                  ],
                },
              },
            ],
          },
          "variableDefinitions": [
            {
              "defaultValue": undefined,
              "directives": undefined,
              "kind": "VariableDefinition",
              "type": {
                "kind": "NamedType",
                "name": {
                  "kind": "Name",
                  "value": "String",
                },
              },
              "variable": {
                "kind": "Variable",
                "name": {
                  "kind": "Name",
                  "value": "name",
                },
              },
            },
          ],
        },
      ],
      "kind": "Document",
      "loc": {
        "end": 92,
        "source": {
          "body": "query getUser($name: String) {
  user(name: $name) {
    id
    firstName
    lastName
  }
}",
          "locationOffset": {
            "column": 1,
            "line": 1,
          },
          "name": "gql",
        },
        "start": 0,
      },
    },
    "variables": {
      "name": "Clara",
    },
  },
  "stale": false,
}
`;

exports[`on success > returns response data 1`] = `
{
  "data": {
    "data": {
      "user": 1200,
    },
  },
  "error": undefined,
  "extensions": undefined,
  "hasNext": false,
  "operation": {
    "context": {
      "fetchOptions": [MockFunction spy] {
        "calls": [
          [],
        ],
        "results": [
          {
            "type": "return",
            "value": {},
          },
        ],
      },
      "requestPolicy": "cache-first",
      "url": "http://localhost:3000/graphql",
    },
    "key": 2,
    "kind": "query",
    "query": {
      "__key": -2395444236,
      "definitions": [
        {
          "directives": undefined,
          "kind": "OperationDefinition",
          "name": {
            "kind": "Name",
            "value": "getUser",
          },
          "operation": "query",
          "selectionSet": {
            "kind": "SelectionSet",
            "selections": [
              {
                "alias": undefined,
                "arguments": [
                  {
                    "kind": "Argument",
                    "name": {
                      "kind": "Name",
                      "value": "name",
                    },
                    "value": {
                      "kind": "Variable",
                      "name": {
                        "kind": "Name",
                        "value": "name",
                      },
                    },
                  },
                ],
                "directives": undefined,
                "kind": "Field",
                "name": {
                  "kind": "Name",
                  "value": "user",
                },
                "selectionSet": {
                  "kind": "SelectionSet",
                  "selections": [
                    {
                      "alias": undefined,
                      "arguments": undefined,
                      "directives": undefined,
                      "kind": "Field",
                      "name": {
                        "kind": "Name",
                        "value": "id",
                      },
                      "selectionSet": undefined,
                    },
                    {
                      "alias": undefined,
                      "arguments": undefined,
                      "directives": undefined,
                      "kind": "Field",
                      "name": {
                        "kind": "Name",
                        "value": "firstName",
                      },
                      "selectionSet": undefined,
                    },
                    {
                      "alias": undefined,
                      "arguments": undefined,
                      "directives": undefined,
                      "kind": "Field",
                      "name": {
                        "kind": "Name",
                        "value": "lastName",
                      },
                      "selectionSet": undefined,
                    },
                  ],
                },
              },
            ],
          },
          "variableDefinitions": [
            {
              "defaultValue": undefined,
              "directives": undefined,
              "kind": "VariableDefinition",
              "type": {
                "kind": "NamedType",
                "name": {
                  "kind": "Name",
                  "value": "String",
                },
              },
              "variable": {
                "kind": "Variable",
                "name": {
                  "kind": "Name",
                  "value": "name",
                },
              },
            },
          ],
        },
      ],
      "kind": "Document",
      "loc": {
        "end": 92,
        "source": {
          "body": "query getUser($name: String) {
  user(name: $name) {
    id
    firstName
    lastName
  }
}",
          "locationOffset": {
            "column": 1,
            "line": 1,
          },
          "name": "gql",
        },
        "start": 0,
      },
    },
    "variables": {
      "name": "Clara",
    },
  },
  "stale": false,
}
`;

exports[`on success > returns response data 2`] = `"{"operationName":"getUser","query":"query getUser($name: String) {\\n  user(name: $name) {\\n    id\\n    firstName\\n    lastName\\n  }\\n}","variables":{"name":"Clara"}}"`;
